[package]
name = "unwx"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "unpack wxapkg easily."
homepage = "https://github.com/unbyte/unwx"
repository = "https://github.com/unbyte/unwx"
keywords = ["wxapkg"]
categories = ["command-line-utilities"]
license = "MIT"
authors = ["unbyte <i@shangyes.net>"]

[[bin]]
name = "unwx"

[dependencies]
xflags = "0.3"
rayon = "1.8"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
