[package]
name = "unwx"
version = "0.2.0"
edition = "2021"
readme = "README.md"
description = "unpack wxapkg easily."
homepage = "https://github.com/unbyte/unwx"
repository = "https://github.com/unbyte/unwx"
keywords = ["wxapkg"]
categories = ["command-line-utilities"]
license = "MIT"
authors = ["unbyte <i@shangyes.net>"]

[[bin]]
name = "unwx"

[dependencies]
xflags = "0.3"
rayon = "1.8"
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
pbkdf2 = "0.12"
sha1 = "0.10"
aes = "0.8"
cbc = "0.1"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
